force-app/main/default/objects/Order/fields/Bill_To_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Id__c</fullName>
    <formula>CASESAFEID( BillToContactId )</formula>
    <label>Bill To Contact Id</label>
    <type>Text</type>
</CustomField>