force-app/main/default/objects/Order/fields/db_days_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>db_days_EffectiveDate__c</fullName>
    <description>This is for the Perfect Date Wizard Tool (v2)</description>
    <label>EffectiveDate db days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>