force-app/main/default/objects/Order/listViews/Orders_in_the_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Orders_in_the_Last_30_Days</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Mine</filterScope>
    <label>Orders in the Last 30 Days</label>
</ListView>